2009-11-16  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (min_bytes_allocd): Multiply GC_free_space_divisor by
	two if GC_incremental (instead of TRUE_INCREMENTAL).

2009-11-10  Ivan Maidanski <ivmai@mail.ru>

	* sparc_mach_dep.S (GC_push_regs): Remove the reference.

2009-11-09  Ivan Maidanski <ivmai@mail.ru>

	* os_dep.c (SIZE_T, PULONG_PTR): Remove.
	* os_dep.c (ULONG_PTR): Replace with GC_ULONG_PTR (defined as GC
	"word"); add the comment.
	* os_dep.c (GetWriteWatch_type, detect_GetWriteWatch,
	GC_gww_read_dirty): Prefix ULONG_PTR with "GC_".

2009-11-07  Ivan Maidanski <ivmai@mail.ru>

	* win32_threads.c (THREAD_TABLE_SZ): Change back to a power-of-two
	const value (for speed).
	* win32_threads.c (THREAD_TABLE_INDEX): New macro.
	* win32_threads.c (GC_new_thread, GC_lookup_thread_inner,
	GC_delete_gc_thread, GC_delete_thread, GC_lookup_pthread): Use
	THREAD_TABLE_INDEX instead of THREAD_TABLE_SZ.
	* win32_threads.c (PTHREAD_MAP_HASH): Rename to PTHREAD_MAP_INDEX.

2009-11-07  Ivan Maidanski <ivmai@mail.ru>

	* win32_threads.c (THREAD_TABLE_SZ): Make the const value prime.

2009-11-06  Ivan Maidanski <ivmai@mail.ru>

	* backgraph.c: Remove apostrophe char from "#error".

2009-11-06  Ivan Maidanski <ivmai@mail.ru>

	* doc/README.macros (GC_DISABLE_INCREMENTAL): Document.
	* include/private/gcconfig.h (GC_DISABLE_INCREMENTAL): Recognize
	new macro; implicitly define it if SMALL_CONFIG.
	* alloc.c (GC_incremental, GC_timeout_stop_func): Check for
	GC_DISABLE_INCREMENTAL instead of SMALL_CONFIG.
	* include/private/gc_priv.h (GC_incremental, TRUE_INCREMENTAL,
	GC_push_conditional): Ditto.
	* mark.c (GC_push_next_marked_dirty, GC_push_selected,
	GC_push_conditional, GC_block_was_dirty): Ditto.
	* misc.c (GC_enable_incremental): Ditto.
	* misc.c (GC_init): Ditto (for "GC_PAUSE_TIME_TARGET" and
	"GC_ENABLE_INCREMENTAL" environment variables).
	* misc.c (GC_enable_incremental): Reformat the code.

2009-11-06  Ivan Maidanski <ivmai@mail.ru>
